etc/kubernetes/ci-cd/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  namespace: "{KUB_NAMESPACE_PREFIX}-{BUILD_ENV}"
  name: "{KUB_NAMESPACE_PREFIX}-{BUILD_ENV}"
