etc/kubernetes/ci-cd/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: "{KUB_SERVICE_NAME}"
  namespace: "{KUB_NAMESPACE_PREFIX}-{BUILD_ENV}"
  labels:
    app: "{KUB_SERVICE_NAME}"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: "{KUB_SERVICE_NAME}"
  template:
    metadata:
      labels:
        app: "{KUB_SERVICE_NAME}"
    spec:
      containers:
        - name: "{KUB_SERVICE_NAME}"
          image: localhost:32000/image:latest
          imagePullPolicy: Always
