etc/kubernetes/ci-cd/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: "{KUB_SERVICE_NAME}-ingress"
  namespace: "{KUB_NAMESPACE_PREFIX}-{BUILD_ENV}"
  annotations:
    kubernetes.io/ingress.class: "public"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  tls:
    - hosts:
        - "{KUB_HOSTNAME}"
      secretName: wildcard-ctdesarrollo-es
  rules:
    - host: "{KUB_HOSTNAME}"
      http:
        paths:
          - path: /{KUB_SERVICE_NAME}-{BUILD_ENV}(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: "{KUB_SERVICE_NAME}"
                port:
                  number: 8080
